# trees

./: CMakeLists.txt  README.md
huffman/debug/log/: log18.11.2019 02:38:28  log18.11.2019 02:39:23  log18.11.2019 02:40:29  log18.11.2019 02:41:48  log18.11.2019 02:56:57  log18.11.2019 12:35:39  log18.11.2019 12:36:44  log18.11.2019 12:40:45  log18.11.2019 13:01:11  log18.11.2019 13:04:40  log18.11.2019 13:09:34  log18.11.2019 13:11:00  log18.11.2019 14:23:21  log18.11.2019 14:30:53  log18.11.2019 14:34:54  log18.11.2019 14:37:57  log18.11.2019 14:43:13  log19.11.2019 01:04:36  log19.11.2019 22:12:54  log20.11.2019 01:20:18  log20.11.2019 21:19:33  log20.11.2019 21:24:18  log20.11.2019 22:46:18  log20.11.2019 22:47:04  log20.11.2019 22:57:53  log20.11.2019 23:19:25  log20.11.2019 23:20:06  log20.11.2019 23:20:28  log20.11.2019 23:20:52  log20.11.2019 23:22:31  log20.11.2019 23:31:27  log20.11.2019 23:33:51  log20.11.2019 23:35:27  log20.11.2019 23:36:39  log20.11.2019 23:36:47  log20.11.2019 23:37:40  log20.11.2019 23:37:53  log20.11.2019 23:38:03  log20.11.2019 23:38:19  (+40 more)
huffman/src/: advancedHuffman.cpp  huffman.cpp  seminarHuffman.cpp  simpleHuffman.cpp  vitterSobaka.cpp
huffman/util/: log.h  visualizeHelper.h
testCode/: comparator.h  generator.h  otherTest.cpp  performance.h  seminarAVL.h  test.cpp
testCode/result/: deleteNumber.csv  deleteString.csv  insertNumber.csv  insertString.csv  numberOrderStatistic.csv  stringOrderStatistic.csv
trees/: avl.cpp  avl.h  bst.cpp  kurevo.cpp
visLib/: visualization.h
visLib/config/: config.json
visLib/log/: log
(+17 files in other folders)
